--- a/SpendWithBrain.xcodeproj/xcshareddata/xcschemes/SpendWithBrain.xcscheme
+++ b/SpendWithBrain.xcodeproj/xcshareddata/xcschemes/SpendWithBrain.xcscheme
@@ -29,11 +29,10 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
+            skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A5591580293117D6005CB53D"
+               BlueprintIdentifier = "A5563E7B2931191700C3BB8F"
                BuildableName = "SpendWithBrainTests.xctest"
                BlueprintName = "SpendWithBrainTests"
                ReferencedContainer = "container:SpendWithBrain.xcodeproj">
